<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardBackgroundColor="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_film"
    android:layout_margin="16dp"
    app:cardElevation="3dp"
    app:cardCornerRadius="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_name" />

        <TextView
            android:textColor="@color/colorAccent"
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/img_photo"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/txt_tgl_rilis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name"
            android:layout_marginStart="8dp"
            android:layout_toRightOf="@id/img_photo"
            android:maxLines="3"
            android:text="@string/release_date"
            android:textSize="11sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_tgl_rilis"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@id/img_photo"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/overview"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toBottomOf="@+id/txt_tgl_rilis" />

        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_star"
            android:text="@string/rating"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_photo" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>