<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"

        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.detail.DetailActivity">

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"

            android:src="@drawable/default_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="200dp"
            android:layout_height="275dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:scaleType="fitXY"
            android:src="@drawable/default_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_backdrop" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_photo"
            android:padding="16dp"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_photo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_name"
            app:layout_constraintStart_toEndOf="@+id/img_photo"
            app:layout_constraintTop_toTopOf="@+id/img_backdrop"
            app:layout_constraintVertical_bias="0.73">

            <TextView
                android:id="@+id/txt_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableLeft="@drawable/ic_star"
                android:drawablePadding="3dp"
                android:gravity="center_vertical"
                android:text="@string/rating"
                android:textColor="@android:color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintStart_toEndOf="@+id/img_photo">

            <TextView
                android:id="@+id/txt_tgl_rilis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:text="@string/date"
                android:textColor="@android:color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="@string/overview"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:id="@+id/txt_description"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sajshajhdjahbdjahdbjahb" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/myFavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_favorite_border"
            app:elevation="6dp"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintBottom_toBottomOf="@+id/img_photo"
            app:layout_constraintEnd_toEndOf="@+id/img_backdrop"
            app:pressedTranslationZ="12dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>